# cognisgraph

./: .dockerignore  .envrc  .gitignore  Dockerfile  Dockerfile.ui  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements-ui.txt  requirements.txt  requirements_streamlit.txt  setup.py  setup.sh  streamlit_app.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
docs/: DEPLOYMENT.md  agent_communication.md  agent_sequence_diagram.md  component_diagrams.md  deployment_strategy.md  enhanced_features.md
examples/: agent_demo.py  basic_test.py  example_usage.py  state_graph_visualization.py  test_ollama.py
helm/cognisgraph/: Chart.yaml  values.yaml
helm/cognisgraph/templates/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
k8s/: configmap.yaml  namespace.yaml  secrets.yaml
src/cognisgraph/: __init__.py  app.py  cognisgraph.py  config.py  exceptions.py
src/cognisgraph/agents/: base_agent.py  orchestrator.py  pdf_agent.py  query_agent.py  visualization_agent.py
src/cognisgraph/api/: app.py  endpoints.py
src/cognisgraph/core/: entity.py  knowledge_store.py  langgraph_workflow.py  message.py  metrics.py  query_engine.py  relationship.py  state_graph.py  tool_node.py
src/cognisgraph/nlp/: entity_extractor.py  pdf_parser.py  query_engine.py  spacy_entity_extractor.py
src/cognisgraph/parsers/: pdf_parser.py
src/cognisgraph/ui/: app.py  components.py  run.py  streamlit_app.py  styling.py
src/cognisgraph/utils/: logger.py
src/cognisgraph/visualization/: graph_visualizer.py
src/cognisgraph/xai/: counterfactual.py  explainer.py  feature_importance.py  rule_extractor.py  saliency.py
tests/: conftest.py  create_test_pdf.py  test_agents.py  test_api.py  test_app.py  test_cognisgraph.py  test_graph_visualizer.py  test_orchestrator.py  test_pdf_agent.py  test_pdf_integration.py  test_pdf_parser.py  test_pdf_processing.py  test_query_agent.py  test_query_engine.py  test_saliency.py  test_tool_node.py  test_visualization.py  test_xai.py
