[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognisgraph"
version = "0.1.0"
description = "CognisGraph: A knowledge graph platform (placeholder description)"
readme = "README.md"  # Assuming you have or will create a README.md
requires-python = ">=3.8"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.23.5,<2.0.0",
    "pandas>=1.3.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "matplotlib>=3.8.0",
    "pyvis>=0.3.2",
    "graphviz>=0.20.1",
    "scikit-learn>=1.0.0",
    "plotly>=5.13.0",
    "streamlit>=1.44.0",
    "torch>=2.1.0",
    "protobuf>=3.20.3,<5.0.0",
    "sentence-transformers>=2.2.2",
    "langgraph>=0.0.10",
    "watchdog>=3.0.0",
    "PyPDF2>=3.0.0",
    "spacy>=3.7.2",
    "nltk>=3.6",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/cognisgraph"  # Replace with your actual URL
"Bug Tracker" = "https://github.com/yourusername/cognisgraph/issues" # Replace with your actual URL

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "reportlab>=3.6",
    # Add other development dependencies here
]

[tool.setuptools.packages.find]
where = ["src"]  # Matches your setup.py package_dir 